--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "btvn4",
+  "name": "quyerde",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "g": "^2.0.1",
-    "mocha": "^5.2.0"
+    "http": "0.0.0"
   }
 }
